cmake_minimum_required(VERSION 3.6)
project(ft_openssl)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        include/base64.h
        include/ft_md5.h
        include/ft_sha256.h
        include/ft_sha512.h
        include/ft_ssl.h
        libft/includes/ft_printf.h
        libft/includes/get_next_line.h
        libft/includes/libft.h
        libft/srcs/gnl/get_next_line.c
        libft/srcs/printf/check.c
        libft/srcs/printf/ft_iitoa.c
        libft/srcs/printf/ft_itoa_base.c
        libft/srcs/printf/ft_printf.c
        libft/srcs/printf/ftoa.c
        libft/srcs/printf/handle.c
        libft/srcs/printf/keys.c
        libft/srcs/printf/main_check.c
        libft/srcs/printf/manage.c
        libft/srcs/printf/manage_dsc.c
        libft/srcs/printf/manage_pf.c
        libft/srcs/printf/manage_uox.c
        libft/srcs/printf/parse.c
        libft/srcs/printf/pf_functions.c
        libft/srcs/printf/pf_functions2.c
        libft/srcs/printf/pf_functions3.c
        libft/srcs/ft_atoi.c
        libft/srcs/ft_bzero.c
        libft/srcs/ft_capitalize.c
        libft/srcs/ft_isalnum.c
        libft/srcs/ft_isalpha.c
        libft/srcs/ft_isascii.c
        libft/srcs/ft_isdigit.c
        libft/srcs/ft_isprint.c
        libft/srcs/ft_iswhitespace.c
        libft/srcs/ft_itoa.c
        libft/srcs/ft_lstadd.c
        libft/srcs/ft_lstdel.c
        libft/srcs/ft_lstdelone.c
        libft/srcs/ft_lstiter.c
        libft/srcs/ft_lstmap.c
        libft/srcs/ft_lstnew.c
        libft/srcs/ft_memalloc.c
        libft/srcs/ft_memccpy.c
        libft/srcs/ft_memchr.c
        libft/srcs/ft_memcmp.c
        libft/srcs/ft_memcpy.c
        libft/srcs/ft_memdel.c
        libft/srcs/ft_memmove.c
        libft/srcs/ft_memset.c
        libft/srcs/ft_memtransform.c
        libft/srcs/ft_putchar.c
        libft/srcs/ft_putchar_fd.c
        libft/srcs/ft_putendl.c
        libft/srcs/ft_putendl_fd.c
        libft/srcs/ft_putnbr.c
        libft/srcs/ft_putnbr_fd.c
        libft/srcs/ft_putstr.c
        libft/srcs/ft_putstr_fd.c
        libft/srcs/ft_range.c
        libft/srcs/ft_strappend.c
        libft/srcs/ft_strcat.c
        libft/srcs/ft_strchr.c
        libft/srcs/ft_strclen.c
        libft/srcs/ft_strclr.c
        libft/srcs/ft_strcmp.c
        libft/srcs/ft_strcpy.c
        libft/srcs/ft_strdel.c
        libft/srcs/ft_strdup.c
        libft/srcs/ft_strequ.c
        libft/srcs/ft_striter.c
        libft/srcs/ft_striteri.c
        libft/srcs/ft_strjoin.c
        libft/srcs/ft_strjoinfree.c
        libft/srcs/ft_strjoinfree1.c
        libft/srcs/ft_strjoinfree2.c
        libft/srcs/ft_strlcat.c
        libft/srcs/ft_strlen.c
        libft/srcs/ft_strmap.c
        libft/srcs/ft_strmapi.c
        libft/srcs/ft_strncat.c
        libft/srcs/ft_strncmp.c
        libft/srcs/ft_strncpy.c
        libft/srcs/ft_strnequ.c
        libft/srcs/ft_strnew.c
        libft/srcs/ft_strnstr.c
        libft/srcs/ft_strrchr.c
        libft/srcs/ft_strsplit.c
        libft/srcs/ft_strstr.c
        libft/srcs/ft_strsub.c
        libft/srcs/ft_strtrim.c
        libft/srcs/ft_swap.c
        libft/srcs/ft_tolower.c
        libft/srcs/ft_toupper.c
        libft/srcs/read_file.c
        libft/srcs/skip_ws.c
        src/base64/base64.c
        src/base64/extra.c
        src/des/des.c
        src/des_cbc/des_cbc.c
        src/des_ecb/des_ecb.c
        src/md5/md5.c
        src/md5/md5_hash.c
        src/md5/md5_utils.c
        src/md5/process_functions.c
        src/sha224/sha224.c
        src/sha224/sha224_hash.c
        src/sha256/sha256.c
        src/sha256/sha256_hash.c
        src/sha256/sha256_process_functions.c
        src/sha256/sha256_utils.c
        src/sha384/sha384.c
        src/sha512/sha512.c
        src/sha512/sha512_hash.c
        src/sha512/sha512_process_functions.c
        src/sha512/sha512_utils.c
        src/error.c
        src/ft_openssl.c
        src/process_stdio_cmd.c
        src/swap_endian.c)

add_executable(ft_openssl ${SOURCE_FILES})